chnges made for env

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGOURL="mongodb+srv://ilakkiyabaskaran1807:QL4JYs6W7KICDymy@cluster.7mtd6.mongodb.net/rough?retryWrites=true&w=majority&appName=Cluster";
+MONGO_URL="mongodb+srv://ilakkiyabaskaran1807:QL4JYs6W7KICDymy@cluster.7mtd6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster";
