Commited for project

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://ilakkiyabaskaran1807:QL4JYs6W7KICDymy@cluster.7mtd6.mongodb.net/?retryWrites=true&w=majority&appName=Cluster";
+NODE_ENV ="production"
