--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.12.1",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1",
     "validator": "^13.12.0"
   }
 }
